--- a/src/Iis.Api/appsettings.json
+++ b/src/Iis.Api/appsettings.json
@@ -74,12 +74,12 @@
   "gsmWorkerUrl": "http://ml.contour.net:8000/transcribe",
   "imageVectorizerUrl": "http://192.168.88.185:7786/encode",
   "elasticSearch": {
-    "Uri": "http://192.168.88.244:20683",
+    "Uri": "http://192.168.88.244:21408",
 //    "Uri": "http://localhost:9200",
     "IndexPreffix": "ont_",
     "totalFieldsLimit": 4096,
     "DefaultLogin": "elastic",
-    "DefaultPassword": "112233",
+    "DefaultPassword": "PW4RAqW5mIGF2oMR",
     "ScrollDurationMinutes": 2
   },
   "reportsAvailable": "true",
