prepare for merge request

--- a/src/Iis.Api/appsettings.json
+++ b/src/Iis.Api/appsettings.json
@@ -44,8 +44,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "db": "Server=192.168.88.94;Port=19432;Database=contour;Username=postgres;Password=S1mpl3xTLS2709",
-//    "db": "Server=localhost;Database=contour_dev_net;Username=postgres;Password=123",
+    "db": "Server=localhost;Database=contour_dev_net;Username=postgres;Password=123",
     "db-flightradar": "Server=localhost;Database=air-backup;Username=postgres;Password=su",
     "db-legacy": "Server=localhost;Database=ContourLegacy;Username=postgres"
   },
@@ -74,8 +73,7 @@
   "gsmWorkerUrl": "http://ml.contour.net:8000/transcribe",
   "imageVectorizerUrl": "http://192.168.88.185:7786/encode",
   "elasticSearch": {
-    "Uri": "http://192.168.88.244:21408",
-//    "Uri": "http://localhost:9200",
+    "Uri": "http://localhost:9200",
     "IndexPreffix": "ont_",
     "totalFieldsLimit": 4096,
     "DefaultLogin": "elastic",
