--- a/src/Iis.Api/appsettings.json
+++ b/src/Iis.Api/appsettings.json
@@ -77,7 +77,7 @@
     "IndexPreffix": "ont_",
     "totalFieldsLimit": 4096,
     "DefaultLogin": "elastic",
-    "DefaultPassword": "PW4RAqW5mIGF2oMR",
+    "DefaultPassword": "112233",
     "ScrollDurationMinutes": 2
   },
   "reportsAvailable": "true",
