feat: upload mp3 files
relates to: IIS-7587

--- a/src/Iis.Api/appsettings.json
+++ b/src/Iis.Api/appsettings.json
@@ -110,7 +110,9 @@
   "disableCORS": false,
   "upload": {
     "docxDirectory": "D:\\!Work\\SchemaStorage\\contour.doc",
-    "pdfDirectory": "D:\\!Work\\SchemaStorage\\cybint.data.file"
+    "pdfDirectory": "D:\\!Work\\SchemaStorage\\cybint.data.file",
+    "videoDirectory": "D:\\!Work\\SchemaStorage\\contour.video",
+    "audioDirectory": "D:\\!Work\\SchemaStorage\\contour.audio"
   },
   "flightRadarDataReader": {
     "dataFolder": "D:\\!Work\\data-collector\\export\\aircrafts",
