feat(access): external users
Relates to IIS-7524

--- a/src/Iis.Api/appsettings.json
+++ b/src/Iis.Api/appsettings.json
@@ -120,6 +120,7 @@
     "errorFolder": "D:\\!Work\\data-collector\\export\\error"
   },
   "externalUserService": {
-    "ServiceType": "DEV"
+    "ServiceType": "dummy",
+    "ConnectionString": ""
   }
 }
