--- a/src/Iis.Api/appsettings.json
+++ b/src/Iis.Api/appsettings.json
@@ -89,7 +89,18 @@
     "queueName": "materials.assign.operator"
   },
   "elasticSaver": {
-    "queueName": "materials.save.elastic"
+    "queueName": "materials.save.elastic",
+    "outgoingQueueName": "materials.elastic.saved",
+    "outgoingExchangeName": "materials",
+    "outgoingRoutingKey": "materials.elastic.saved"
+  },
+  "eventMaterialsAssigner": {
+    "incomingQueueName": "materials.elastic.saved",
+    "incomingExchangeName": "materials",
+    "incomingRoutingKey": "materials.elastic.saved",
+    "outgoingQueueName": "materials.processing.termcheck",
+    "outgoingExchangeName": "materials",
+    "outgoingRoutingKey": "terms-checker"
   },
   "featureHandler": {
     "sourceChannel": {
