feat(ontology): ad Login
Relates to IIS-7542

--- a/src/Iis.Api/appsettings.json
+++ b/src/Iis.Api/appsettings.json
@@ -123,7 +123,7 @@
     "docxDirectory": "D:\\!Work\\SchemaStorage\\contour.doc",
     "pdfDirectory": "D:\\!Work\\SchemaStorage\\cybint.data.file",
     "videoDirectory": "D:\\!Work\\SchemaStorage\\contour.video",
-    "audioDirectory": "D:\\!Work\\SchemaStorage\\contour.audio"
+     "audioDirectory": "D:\\!Work\\SchemaStorage\\contour.audio"
   },
   "flightRadarDataReader": {
     "dataFolder": "D:\\!Work\\data-collector\\export\\aircrafts",
@@ -131,7 +131,9 @@
     "errorFolder": "D:\\!Work\\data-collector\\export\\error"
   },
   "externalUserService": {
-    "ServiceType": "dummy",
-    "ConnectionString": ""
+    "ServiceType": "ad",
+    "Server": "192.168.88.154",
+    "Username": "Admin",
+    "Password": "ZAQ!2wsx"
   }
 }
