feat: accept messages from terms checker
relates to: IIS-6804

--- a/src/Iis.Api/appsettings.json
+++ b/src/Iis.Api/appsettings.json
@@ -94,13 +94,18 @@
     "outgoingExchangeName": "materials",
     "outgoingRoutingKey": "materials.elastic.saved"
   },
-  "eventMaterialsAssigner": {
+  "materialMessageHandler": {
     "incomingQueueName": "materials.elastic.saved",
     "incomingExchangeName": "materials",
     "incomingRoutingKey": "materials.elastic.saved",
     "outgoingQueueName": "materials.processing.termcheck",
     "outgoingExchangeName": "materials",
     "outgoingRoutingKey": "terms-checker"
+  },
+  "eventMaterialsAssigner": {
+    "incomingQueueName": "materials.termcheck.foundmaterials",
+    "incomingExchangeName": "materials",
+    "incomingRoutingKey": "terms-checker"
   },
   "featureHandler": {
     "sourceChannel": {
