--- a/src/Iis.EventMaterialAutoAssignment/Iis.EventMaterialAutoAssignment.csproj
+++ b/src/Iis.EventMaterialAutoAssignment/Iis.EventMaterialAutoAssignment.csproj
@@ -1,18 +1,19 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="5.0.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
     <PackageReference Include="RabbitMQ.Client" Version="5.1.2" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Iis.Domain\Iis.Domain.csproj" />
     <ProjectReference Include="..\Iis.EventMaterialAutoAssignment.DataModel\Iis.EventMaterialAutoAssignment.DataModel.csproj" />
+    <ProjectReference Include="..\Iis.Services\Iis.Services.csproj" />
   </ItemGroup>
 
 </Project>
