fix of external users config

--- a/src/Iis.Api/appsettings.json
+++ b/src/Iis.Api/appsettings.json
@@ -136,7 +136,7 @@
     "errorFolder": "D:\\!Work\\data-collector\\export\\error"
   },
   "externalUserService": {
-    "ServiceType": "ad",
+    "ServiceType": "dummy",
     "Server": "192.168.88.154",
     "Username": "Admin",
     "Password": "ZAQ!2wsx"
