feat(matrix): register users
Relates to IIS-7745

--- a/src/Iis.Api/appsettings.json
+++ b/src/Iis.Api/appsettings.json
@@ -140,5 +140,12 @@
     "Server": "192.168.88.154",
     "Username": "Admin",
     "Password": "ZAQ!2wsx"
+  },
+  "matrix": {
+    "Enabled": true,
+    "Server": "http://192.168.88.244:29656/",
+    "CreateUsers": true,
+    "UserName": "olya",
+    "Password": "d86f8961817b4494b0a8330c037b5053"
   }
 }
