fix: change routing key

--- a/src/Iis.Api/appsettings.json
+++ b/src/Iis.Api/appsettings.json
@@ -105,7 +105,7 @@
   "eventMaterialsAssigner": {
     "incomingQueueName": "materials.termcheck.foundmaterials",
     "incomingExchangeName": "materials",
-    "incomingRoutingKey": "terms-checker"
+    "incomingRoutingKey": "found-materials"
   },
   "featureHandler": {
     "sourceChannel": {
