feat(ontology): ad users
Relates to IIS-7542

--- a/src/Iis.Api/appsettings.json
+++ b/src/Iis.Api/appsettings.json
@@ -145,6 +145,8 @@
     "Enabled": true,
     "Server": "http://192.168.88.244:29656/",
     "CreateUsers": true,
+    "Domain": "DC=contour,DC=com",
+    "Port":  389,
     "UserName": "olya",
     "Password": "d86f8961817b4494b0a8330c037b5053"
   }
