--- a/src/Iis.Api/appsettings.json
+++ b/src/Iis.Api/appsettings.json
@@ -115,6 +115,15 @@
       "prefetchCount": 5
     }
   },
+  "coordinatesMessageHandler": {
+    "handlerName": "messageHandler.coordinates",
+    "sourceChannel": {
+        "exchangeName": "materials",
+        "queueName": "materials.processing.coordinates",
+        "prefetchCount": 3,
+        "routingKeys": ["processing.coordinates"]
+    }
+  },
   "activeDirectory": {
     "server": "192.168.88.31",
     "login": "iis",
