--- a/src/Iis.Services.Contracts/Iis.Services.Contracts.csproj
+++ b/src/Iis.Services.Contracts/Iis.Services.Contracts.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Iis.Domain\Iis.Domain.csproj" />
     <ProjectReference Include="..\Iis.Interfaces\Iis.Interfaces.csproj" />
+    <ProjectReference Include="..\Iis.RabbitMq\Iis.RabbitMq.csproj" />
   </ItemGroup>
 
 </Project>
