added new publisher
added new exchange2exchange binding

removed redundand types

--- a/src/Iis.Api/appsettings.json
+++ b/src/Iis.Api/appsettings.json
@@ -124,6 +124,15 @@
         "routingKeys": ["processing.coordinates"]
     }
   },
+  "materialConsumer": {
+      "handlerName": "materialConsumer",
+      "sourceChannel": {
+        "exchangeName": "materials",
+        "queueName": "material.created",
+        "prefetchCount": 5,
+        "routingKeys": ["material.created"]
+      }
+  },
   "activeDirectory": {
     "server": "192.168.88.31",
     "login": "iis",
