--- a/src/Iis.MaterialLoader/appsettings.json
+++ b/src/Iis.MaterialLoader/appsettings.json
@@ -52,5 +52,22 @@
   },
   "mq": {
     "hostName": "localhost"
+  },
+  "eventProducer": {
+    "targetChannel": {
+        "exchangeName": "materials",
+        "routingKeys": ["material.created"]
+    }
+  },
+  "externalExchanges": {
+    "source": {
+        "exchangeName": "materials"
+    },
+    "destinationList": [
+        {
+            "exchangeName": "materials.external",
+            "routingKeys": ["#"]
+        }
+    ]
   }
 }
