--- a/src/Iis.Api/appsettings.json
+++ b/src/Iis.Api/appsettings.json
@@ -115,6 +115,15 @@
       "prefetchCount": 5
     }
   },
+  "materialConsumer": {
+      "handlerName": "materialConsumer",
+      "sourceChannel": {
+        "exchangeName": "materials",
+        "queueName": "material.created",
+        "prefetchCount": 5,
+        "routingKeys": ["material.created"]
+      }
+  },
   "activeDirectory": {
     "server": "192.168.88.31",
     "login": "iis",
