--- a/src/Iis.UnitTests/Iis.UnitTests.csproj
+++ b/src/Iis.UnitTests/Iis.UnitTests.csproj
@@ -43,6 +43,7 @@
     <ProjectReference Include="..\Iis.OntologySchema\Iis.OntologySchema.csproj" />
     <ProjectReference Include="..\Iis.Services\Iis.Services.csproj" />
     <ProjectReference Include="..\Iis.Utility\Iis.Utility.csproj" />
+    <ProjectReference Include="..\Iis.RabbitMq\Iis.RabbitMq.csproj" />
   </ItemGroup>  
 
   <ItemGroup>
