--- a/src/Iis.MaterialLoader/Iis.MaterialLoader.csproj
+++ b/src/Iis.MaterialLoader/Iis.MaterialLoader.csproj
@@ -29,8 +29,9 @@
       <ProjectReference Include="..\Iis.Messages\Iis.Messages.csproj" />
       <ProjectReference Include="..\IIS.Repository\IIS.Repository.csproj" />
       <ProjectReference Include="..\Iis.Services\Iis.Services.csproj" />
-      <ProjectReference Include="..\Iis.Interfaces\Iis.Interfaces.csproj"/>
+      <ProjectReference Include="..\Iis.Interfaces\Iis.Interfaces.csproj" />
       <ProjectReference Include="..\Iis.RabbitMq\Iis.RabbitMq.csproj" />
+      <ProjectReference Include="..\Iis.Utility\Iis.Utility.csproj" />
     </ItemGroup>
 
 
