refactor: enable Microsoft.CodeAnalysis, fix some warnings, add supression

--- a/src/IIS.Repository/IIS.Repository.csproj
+++ b/src/IIS.Repository/IIS.Repository.csproj
@@ -7,6 +7,12 @@
     <OutputPath></OutputPath>
   </PropertyGroup>
 
+  <PropertyGroup>
+	<EnableNETAnalyzers>true</EnableNETAnalyzers>
+	<AnalysisMode>AllEnabledByDefault</AnalysisMode>
+	<AnalysisLevel>latest</AnalysisLevel>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.4" />
