--- a/src/Iis.DataModel/Iis.DataModel.csproj
+++ b/src/Iis.DataModel/Iis.DataModel.csproj
@@ -4,6 +4,12 @@
     <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup>
+	<EnableNETAnalyzers>true</EnableNETAnalyzers>
+	<AnalysisMode>AllEnabledByDefault</AnalysisMode>
+	<AnalysisLevel>latest</AnalysisLevel>
+  </PropertyGroup>
+
   <ItemGroup>
     <Compile Remove="ConnectionString\**" />
     <Compile Remove="Meta\**" />
