feat(material): MateralDistributionService
Relates to IIS-8007

--- a/src/Iis.Domain/Iis.Domain.csproj
+++ b/src/Iis.Domain/Iis.Domain.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\Iis.Interfaces\Iis.Interfaces.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="MaterialsDistribution\" />
+  </ItemGroup>
+
 </Project>
