fix: wrong image vectorizer url

--- a/src/Iis.Api/appsettings.json
+++ b/src/Iis.Api/appsettings.json
@@ -71,7 +71,7 @@
     }
   },
   "gsmWorkerUrl": "http://ml.contour.net:8000/transcribe",
-  "imageVectorizerUrl": "http://192.168.88.185:7786/encode",
+  "imageVectorizerUrl": "http://ml-ifr.contour.net/encode",
   "elasticSearch": {
     "Uri": "http://localhost:9200",
     "IndexPreffix": "ont_",
