--- a/src/Iis.CoordinatesHandler/Iis.CoordinatesHandler.csproj
+++ b/src/Iis.CoordinatesHandler/Iis.CoordinatesHandler.csproj
@@ -15,6 +15,10 @@
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
     <PackageReference Include="RabbitMQ.Client" Version="5.1.2" />
+    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Iis.RabbitMq\Iis.RabbitMq.csproj" />
