--- a/src/Iis.DbLayer/Iis.DbLayer.csproj
+++ b/src/Iis.DbLayer/Iis.DbLayer.csproj
@@ -13,6 +13,10 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="9.0.0" />
     <PackageReference Include="morelinq" Version="3.3.2" />
+    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
