--- a/src/Iis.Utility/Iis.Utility.csproj
+++ b/src/Iis.Utility/Iis.Utility.csproj
@@ -23,6 +23,10 @@
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Npgsql" Version="5.0.3" />
     <PackageReference Include="Serilog" Version="2.9.0" />
+    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
 	<ItemGroup>
