--- a/src/Iis.EventMaterialAutoAssignment/Iis.EventMaterialAutoAssignment.csproj
+++ b/src/Iis.EventMaterialAutoAssignment/Iis.EventMaterialAutoAssignment.csproj
@@ -24,6 +24,7 @@
     <ProjectReference Include="..\Iis.Domain\Iis.Domain.csproj" />
     <ProjectReference Include="..\Iis.EventMaterialAutoAssignment.DataModel\Iis.EventMaterialAutoAssignment.DataModel.csproj" />
     <ProjectReference Include="..\Iis.Services\Iis.Services.csproj" />
+    <ProjectReference Include="..\Iis.RabbitMq\Iis.RabbitMq.csproj" />
   </ItemGroup>
 
 </Project>
