fix: respect time in range
relates to: IIS-8379

--- a/src/.editorconfig
+++ b/src/.editorconfig
@@ -119,3 +119,6 @@ dotnet_diagnostic.SA1210.severity = none
 
 # CA1826: Do not use Enumerable methods on indexable collections
 dotnet_diagnostic.CA1826.severity = none
+
+# CA1305: Specify IFormatProvider
+dotnet_diagnostic.CA1305.severity = none
