--- a/src/Iis.Desktop.Common/Iis.Desktop.Common.csproj
+++ b/src/Iis.Desktop.Common/Iis.Desktop.Common.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
 
   <PropertyGroup>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Library</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
     <UserSecretsId>d73ed47d-1c3e-4446-9e0b-9c42aef795aa</UserSecretsId>
@@ -11,7 +11,15 @@
 	<EnableNETAnalyzers>true</EnableNETAnalyzers>
 	<AnalysisMode>AllEnabledByDefault</AnalysisMode>
 	<AnalysisLevel>latest</AnalysisLevel>
+	<ApplicationIcon />
+	<StartupObject />
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="Parameters\**" />
+    <EmbeddedResource Remove="Parameters\**" />
+    <None Remove="Parameters\**" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
@@ -29,27 +37,6 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Iis.DataModel\Iis.DataModel.csproj" />
-    <ProjectReference Include="..\Iis.DbLayer\Iis.DbLayer.csproj" />
-    <ProjectReference Include="..\Iis.Desktop.Common\Iis.Desktop.Common.csproj" />
-    <ProjectReference Include="..\Iis.OntologyData\Iis.OntologyData.csproj" />
-    <ProjectReference Include="..\Iis.OntologySchema.Saver\Iis.OntologySchema.Saver.csproj" />
-    <ProjectReference Include="..\Iis.OntologySchema\Iis.OntologySchema.csproj" />
-    <ProjectReference Include="..\Iis.Services.Contracts\Iis.Services.Contracts.csproj" />
-    <ProjectReference Include="..\Iis.Services\Iis.Services.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Update="appsettings.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Parameters\" />
   </ItemGroup>
 
 </Project>
