Move RequestWrapper to Desktop.Common
Relates to IIS-7828

--- a/src/Iis.Desktop.Common/Iis.Desktop.Common.csproj
+++ b/src/Iis.Desktop.Common/Iis.Desktop.Common.csproj
@@ -39,4 +39,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Iis.Interfaces\Iis.Interfaces.csproj" />
+  </ItemGroup>
+
 </Project>
