--- a/src/Iis.Desktop.SecurityManager/Iis.Desktop.SecurityManager.csproj
+++ b/src/Iis.Desktop.SecurityManager/Iis.Desktop.SecurityManager.csproj
@@ -38,6 +38,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Iis.Desktop.Common\Iis.Desktop.Common.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
