--- a/src/Iis.Api/appsettings.json
+++ b/src/Iis.Api/appsettings.json
@@ -161,11 +161,17 @@
     "Username": "Admin",
     "Password": "ZAQ!2wsx"
   },
-  "matrix": {
-    "Enabled": true,
-    "Server": "http://192.168.88.244:29656/",
-    "CreateUsers": true,
-    "UserName": "olya",
-    "Password": "d86f8961817b4494b0a8330c037b5053"
-  }
+    "matrix": {
+        "Enabled": true,
+        "Server": "http://192.168.88.244:29656/",
+        "CreateUsers": true,
+        "UserName": "olya",
+        "Password": "d86f8961817b4494b0a8330c037b5053"
+    },
+    "backgroungServices": {
+        "MaterialMetrics": {
+            "Timeout": "00:00:00:30",
+            "ErrorTimeout": "00:00:01:00"
+        }
+    }
 }
