--- a/src/.editorconfig
+++ b/src/.editorconfig
@@ -122,3 +122,9 @@ dotnet_diagnostic.CA1826.severity = none
 
 # CA1305: Specify IFormatProvider
 dotnet_diagnostic.CA1305.severity = none
+
+# CA1716: Identifiers should not match keywords
+dotnet_diagnostic.CA1716.severity = none
+
+# CA1724: Type names should not match namespaces
+dotnet_diagnostic.CA1724.severity = none
