--- a/src/Iis.UnitTests/Iis.UnitTests.csproj
+++ b/src/Iis.UnitTests/Iis.UnitTests.csproj
@@ -45,6 +45,7 @@
     <ProjectReference Include="..\Iis.DbLayer\Iis.DbLayer.csproj" />
     <ProjectReference Include="..\Iis.OntologyData\Iis.OntologyData.csproj" />
     <ProjectReference Include="..\Iis.OntologySchema\Iis.OntologySchema.csproj" />
+    <ProjectReference Include="..\Iis.Security\Iis.Security.csproj" />
     <ProjectReference Include="..\Iis.Services\Iis.Services.csproj" />
     <ProjectReference Include="..\Iis.Utility\Iis.Utility.csproj" />
     <ProjectReference Include="..\Iis.RabbitMq\Iis.RabbitMq.csproj" />
