--- a/src/Iis.AcceptanceTests/Iis.AcceptanceTests.csproj
+++ b/src/Iis.AcceptanceTests/Iis.AcceptanceTests.csproj
@@ -29,6 +29,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <SpecFlowObsoleteCodeBehindFiles Remove="Features\UI\Smoke Tests\AdministrationSectionUI - Copy.feature.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="DotNetSeleniumExtras.PageObjects.Core" Version="3.12.0" />
     <PackageReference Include="FluentAssertions" Version="5.10.3" />
     <PackageReference Include="GraphQL.Client" Version="3.2.3" />
@@ -55,6 +59,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Features\UI\Smoke Tests\REO.feature.cs">
+      <DependentUpon>REO.feature</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="C:\Users\user\.nuget\packages\specflow.xunit\3.1.97\build\\..\lib\netstandard2.0\TechTalk.SpecFlow.xUnit.SpecFlowPlugin.dll" Link="Main\Helpers\TechTalk.SpecFlow.xUnit.SpecFlowPlugin.dll" />
     <None Update="C:\Users\user\.nuget\packages\xunit.runner.visualstudio\2.4.1\build\netcoreapp1.0\xunit.runner.reporters.netcoreapp10.dll" Link="Main\Helpers\xunit.runner.reporters.netcoreapp10.dll" />
     <None Update="C:\Users\user\.nuget\packages\xunit.runner.visualstudio\2.4.1\build\netcoreapp1.0\xunit.runner.utility.netcoreapp10.dll" Link="Main\Helpers\xunit.runner.utility.netcoreapp10.dll" />
@@ -65,6 +75,13 @@
     <None Update="xunit.runner.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <SpecFlowFeatureFiles Update="Features\UI\Smoke Tests\REO.feature">
+      <Visible>$(UsingMicrosoftNETSdk)</Visible>
+      <CodeBehindFile>%(RelativeDir)%(Filename).feature$(DefaultLanguageSourceExtension)</CodeBehindFile>
+    </SpecFlowFeatureFiles>
   </ItemGroup>
 
 </Project>
