--- a/src/.editorconfig
+++ b/src/.editorconfig
@@ -128,3 +128,6 @@ dotnet_diagnostic.CA1716.severity = none
 
 # CA1724: Type names should not match namespaces
 dotnet_diagnostic.CA1724.severity = none
+
+# CA1812: Avoid uninstantiated internal classes
+dotnet_diagnostic.CA1812.severity = none
