--- a/src/.editorconfig
+++ b/src/.editorconfig
@@ -131,3 +131,6 @@ dotnet_diagnostic.CA1724.severity = none
 
 # CA1812: Avoid uninstantiated internal classes
 dotnet_diagnostic.CA1812.severity = none
+
+# CA1014: Mark assemblies with CLSCompliant
+dotnet_diagnostic.CA1014.severity = none
