--- a/src/Iis.Desktop.SecurityManager/Iis.Desktop.SecurityManager.csproj
+++ b/src/Iis.Desktop.SecurityManager/Iis.Desktop.SecurityManager.csproj
@@ -39,6 +39,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Iis.Desktop.Common\Iis.Desktop.Common.csproj" />
+    <ProjectReference Include="..\Iis.Security\Iis.Security.csproj" />
   </ItemGroup>
 
   <ItemGroup>
