--- a/src/Iis.Desktop.SecurityManager/appsettings.json
+++ b/src/Iis.Desktop.SecurityManager/appsettings.json
@@ -27,6 +27,10 @@
     "demo": {
       "sortOrder": 3,
       "apiUri": "http://demo-api.contour.net:5000",
+    },
+    "local": {
+      "sortOrder": 6,
+      "apiUri": "http://localhost:5000"
     }
   }
 }
