[IIS-8553] [BE] Создать логику для чтения из хранилища данных матералов

--- a/src/Iis.MaterialDistributor/appsettings.json
+++ b/src/Iis.MaterialDistributor/appsettings.json
@@ -42,5 +42,13 @@
             "WithThreadId",
             "WithCorrelationId"
         ]
+    },
+    "elasticSearch": {
+        "Uri": "http://localhost:9200",
+        "IndexPreffix": "ont_",
+        "totalFieldsLimit": 4096,
+        "DefaultLogin": "elastic",
+        "DefaultPassword": "112233",
+        "ScrollDurationMinutes": 2
     }
 }
