--- a/src/Iis.MaterialDistributor/Iis.MaterialDistributor.csproj
+++ b/src/Iis.MaterialDistributor/Iis.MaterialDistributor.csproj
@@ -11,6 +11,8 @@
 	</PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
+        <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="8.1.0" />
         <PackageReference Include="Serilog" Version="2.9.0" />
         <PackageReference Include="Serilog.AspNetCore" Version="3.2.0" />
         <PackageReference Include="Serilog.Enrichers.Thread" Version="3.1.0" />
@@ -20,5 +22,10 @@
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+    </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\Iis.Elastic\Iis.Elastic.csproj" />
+        <ProjectReference Include="..\Iis.Utility\Iis.Utility.csproj" />
+        <ProjectReference Include="..\Iis.RabbitMq\Iis.RabbitMq.csproj" />
     </ItemGroup>
 </Project>
