--- a/src/Iis.MaterialDistributor/appsettings.json
+++ b/src/Iis.MaterialDistributor/appsettings.json
@@ -50,5 +50,8 @@
         "DefaultLogin": "elastic",
         "DefaultPassword": "112233",
         "ScrollDurationMinutes": 2
+    },
+    "ConnectionStrings": {
+        "db": "Server=localhost;Database=contour_dev_net;Username=postgres;Password=123"
     }
 }
