feat: send criterias event
Closes IIS-8517

--- a/src/Iis.Services/Iis.Services.csproj
+++ b/src/Iis.Services/Iis.Services.csproj
@@ -28,6 +28,7 @@
     <ProjectReference Include="..\Iis.DataModel\Iis.DataModel.csproj" />
     <ProjectReference Include="..\Iis.Events\Iis.Events.csproj" />
     <ProjectReference Include="..\Iis.Interfaces\Iis.Interfaces.csproj" />
+    <ProjectReference Include="..\Iis.Messages\Iis.Messages.csproj" />
     <ProjectReference Include="..\Iis.Services.Contracts\Iis.Services.Contracts.csproj" />
     <ProjectReference Include="..\IIS.Repository\IIS.Repository.csproj" />
     <ProjectReference Include="..\Iis.DbLayer\Iis.DbLayer.csproj" />
