--- a/src/Iis.MaterialDistributor/appsettings.json
+++ b/src/Iis.MaterialDistributor/appsettings.json
@@ -56,5 +56,26 @@
     },
     "distribution": {
         "refreshMaterialInterval": "02:00:00"
+    },
+    "materialCoefficientsConsumer": {
+        "handlerName": "materialCoefficientsConsumer",
+        "sourceChannel": {
+            "exchangeName": "materials",
+            "queueName": "material.coefficients",
+            "prefetchCount": 5,
+            "routingKeys": [ "material.coefficients" ]
+        }
+    },
+    "materialCoefficientsPublisher": {
+        "handlerName": "materialCoefficientsPublisher",
+        "sourceChannel": {
+            "exchangeName": "materials",
+            "queueName": "material.coefficients.evaluated",
+            "prefetchCount": 5,
+            "routingKeys": [ "material.coefficients.evaluated" ]
+        }
+    },
+    "mq": {
+        "hostName": "localhost"
     }
 }
