--- a/src/Iis.MaterialDistributor/appsettings.json
+++ b/src/Iis.MaterialDistributor/appsettings.json
@@ -53,5 +53,8 @@
     },
     "ConnectionStrings": {
         "db": "Server=localhost;Database=contour_dev_net;Username=postgres;Password=123"
+    },
+    "distribution": {
+        "refreshMaterialInterval": "02:00:00"
     }
 }
