--- a/src/Iis.MaterialDistributor/Iis.MaterialDistributor.csproj
+++ b/src/Iis.MaterialDistributor/Iis.MaterialDistributor.csproj
@@ -1,7 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <UserSecretsId>6c2161bb-c997-48ec-b062-219c27b5d09e</UserSecretsId>
   </PropertyGroup>
 
 	<PropertyGroup>
@@ -9,6 +10,12 @@
 		<AnalysisMode>AllEnabledByDefault</AnalysisMode>
 		<AnalysisLevel>latest</AnalysisLevel>
 	</PropertyGroup>
+
+	<ItemGroup>
+		<AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+			<_Parameter1>Iis.UnitTests.MaterialDistributor</_Parameter1>
+		</AssemblyAttribute>
+	</ItemGroup>
 
     <ItemGroup>
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
@@ -32,8 +39,5 @@
         <ProjectReference Include="..\Iis.MaterialDistributor.DataModel\Iis.MaterialDistributor.DataModel.csproj" />
         <ProjectReference Include="..\Iis.Utility\Iis.Utility.csproj" />
         <ProjectReference Include="..\Iis.RabbitMq\Iis.RabbitMq.csproj" />
-    </ItemGroup>
-    <ItemGroup>
-      <Folder Include="Repositories\DataType\" />
     </ItemGroup>
 </Project>
