[IIS-8579] [BE] Создать логику "запрос-ответ" и получение материала

--- a/src/Iis.Api/appsettings.json
+++ b/src/Iis.Api/appsettings.json
@@ -142,6 +142,12 @@
             "routingKeys": [ "material.coefficients.evaluated" ]
         }
     },
+    "materialNextAssignedPublisher": {
+        "targetChannel": {
+            "exchangeName": "materials",
+            "routingKey": "material.getNextAssigned"
+        }
+    },
     "activeDirectory": {
         "server": "192.168.88.31",
         "login": "iis",
