--- a/src/Iis.MaterialDistributor/appsettings.json
+++ b/src/Iis.MaterialDistributor/appsettings.json
@@ -63,7 +63,9 @@
             "exchangeName": "materials",
             "queueName": "material.coefficients",
             "prefetchCount": 5,
-            "routingKeys": [ "material.coefficients" ]
+            "routingKeys": [
+                "material.coefficients"
+            ]
         }
     },
     "materialCoefficientsPublisher": {
@@ -72,7 +74,17 @@
             "exchangeName": "materials",
             "queueName": "material.coefficients.evaluated",
             "prefetchCount": 5,
-            "routingKeys": [ "material.coefficients.evaluated" ]
+            "routingKeys": [
+                "material.coefficients.evaluated"
+            ]
+        }
+    },
+    "materialNextAssignedConsumer": {
+        "sourceChannel": {
+            "exchangeName": "materials",
+            "queueName": "material.nextAssigned",
+            "prefetchCount": 5,
+            "routingKey": "material.getNextAssigned"
         }
     },
     "mq": {
